--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Card Drawing Game</title>
+    <title>We Haven't Decided Yet</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>Card Drawing Game</h1>
+    <h1>We Haven't Decided Yet</h1>
     
-    <label for="interval">Select an Interval:</label>
+    <label for="interval">Select Cart Type:</label>
     <select id="interval">
         <option value="daily">Daily</option>
         <option value="weekly">Weekly</option>
