Update index.html to include game title

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>We Haven't Decided Yet</title>
+    <title>Exhibition: The Game</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
 
 </head>
 <body>
-    <h1>We Haven't Decided Yet</h1>
+    <h1>Exhibition: The Game</h1>
     <select id="interval">
         <option value="daily">Daily</option>
         <option value="weekly">Weekly</option>
